--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -10,6 +10,7 @@
             <!-- RouteLink will update partially component we dont want the whole page get refreshed -->
             <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/welcome/yimin" class ="nav-link">Home</a></li>
             <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/employees"     class ="nav-link">Employees</a></li>
+            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/departments"    class ="nav-link">Departments</a></li>
         </ul>
         <ul class="navbar-nav navbar-collapse justify-content-end">
             <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/login"  class ="nav-link">Login</a></li>
